--- a/Pertemuan 18 - Testing GitHub/HelloGitHub.ipynb
+++ b/Pertemuan 18 - Testing GitHub/HelloGitHub.ipynb
@@ -16,6 +16,23 @@
    "source": [
     "print(\"Helloo GitHub\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test code from Windows\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test code from Windows\")"
+   ]
   }
  ],
  "metadata": {
